@@ -176,7 +176,8 @@ struct ext2_dir_entry
   {
     __u32 inode;		/* Inode number */
     __u16 rec_len;		/* Directory entry length */
-    __u16 name_len;		/* Name length */
+    __u8 name_len;		/* Name length */
+    __u8 file_type;
     char name[EXT2_NAME_LEN];	/* File name */
   };
 
